<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    card_view:cardCornerRadius="4dp"
    >

    <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/list_item_pokedex_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:padding="4dp"
            android:hint="@string/pokemon_name_hint"
            />

        <ImageView
            android:id="@+id/list_item_pokedex_img"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/list_item_pokedex_name"
            />

        <LinearLayout
            android:id="@+id/list_item_pokedex_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp"
            android:layout_toRightOf="@id/list_item_pokedex_name"
            >
            <TextView
                android:id="@+id/list_item_pokedex_type1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/type1_hint"
                android:layout_margin="1dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/list_item_pokedex_type2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="1dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <GridLayout
            android:id="@+id/list_item_pokedex_layout_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="3"
            android:layout_below="@id/list_item_pokedex_type"
            android:layout_toRightOf="@id/list_item_pokedex_img"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_margin="5dp"
                android:text="@string/base_attack_title"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/list_item_pokedex_tv_base_attack"
                android:layout_gravity="center_vertical"/>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/list_item_pokedex_pbar_base_attack"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_margin="5dp"
                android:text="@string/base_defense_title"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/list_item_pokedex_tv_base_defense"
                android:layout_gravity="center_vertical"/>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/list_item_pokedex_pbar_base_defense"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_margin="5dp"
                android:text="@string/base_stamina_title"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/list_item_pokedex_tv_base_stamina"
                android:layout_gravity="center_vertical"/>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:id="@+id/list_item_pokedex_pbar_base_stamina"
                android:layout_columnWeight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:layout_marginLeft="5dp"/>

        </GridLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>